--- a/web/index.html
+++ b/web/index.html
@@ -13,13 +13,14 @@
             <div class="search-page">
                 <!--monster-logo-->
                 <div class="search-logo">
-                    <img src="static/monster.jpg" onclick="CleanSearchResult()" alt="倾心以饰做,羞赠以佳人">
+                    <img src="static/monster.jpg" onclick="restore()" alt="倾心以饰做,羞赠以佳人">
                 </div>
 
                 <!--搜索框-->
                 <div class="search-box">
                     <!--搜索输入框-->
-                    <input class="search-input" type="text" name="key" placeholder="Monster搜索 — 谨此献给ZHY">
+                    <!--v-on:keyup.enter="searchGo"-->
+                    <input class="search-input" type="text" name="key"  autocomplete="off" placeholder="Monster搜索 — 谨此献给ZHY">
                     <!--搜索按钮-->
                     <input class="search-button" type="button"  v-on:click="searchGo" value="S">
                 </div>
