--- a/web/index.html
+++ b/web/index.html
@@ -1,28 +1,28 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
         <link rel="stylesheet" href="static/monstyle.css" type="text/css" >
 
         <title>Monster搜索 — 谨此献给ZHY</title>
 
     </head>
     <body>
-        <form id="search" name="search">
+        <form id="search" name="search" action="" onkeydown="if(event.keyCode==13){return false;}" >
 
             <!--搜索页面-->
-            <div class="search-page">
+            <div class="search-page" id="search-page">
                 <!--monster-logo-->
-                <div class="search-logo">
+                <div class="search-logo" id="search-logo">
                     <img src="static/monster.jpg" onclick="restore()" alt="倾心以饰做,羞赠以佳人">
                 </div>
 
                 <!--搜索框-->
-                <div class="search-box">
+                <div class="search-box" id="search-box-id">
                     <!--搜索输入框-->
-                    <!--v-on:keyup.enter="searchGo"-->
-                    <input class="search-input" type="text" name="key"  autocomplete="off" placeholder="Monster搜索 — 谨此献给ZHY">
+                    <input class="search-input" type="text" name="key" autocomplete="off" v-on:keyup.enter="searchGo" placeholder="Monster搜索 — 谨此献给ZHY">
                     <!--搜索按钮-->
-                    <input class="search-button" type="button"  v-on:click="searchGo" value="S">
+                    <input class="search-button" type="button"  v-on:click="searchGo"value="S">
                 </div>
 
                 <!--搜索结果-->
