--- a/web/index.html
+++ b/web/index.html
@@ -20,9 +20,9 @@
                 <!--搜索框-->
                 <div class="search-box" id="search-box-id">
                     <!--搜索输入框-->
-                    <input class="search-input" type="text" name="key" autocomplete="off" placeholder="Monster搜索 — 谨此献给ZHY">
+                    <input class="search-input" type="text" name="key" value="" autocomplete="off" placeholder="Monster搜索 — 谨此献给ZHY">
                     <!--搜索按钮-->
-                    <input class="search-button" type="button" onclick="searchGo(true)" value="S">
+                    <input class="search-button" type="button" onclick="searchGo(true,false)" value="S">
                 </div>
 
                 <!--搜索结果-->
